OPTION(ENABLE_QYOTO "build Qyoto" ON)
OPTION(ENABLE_QTSCRIPT_SHARP "build QtScript" ON)
OPTION(ENABLE_QTTEST "build QtTest" ON)
OPTION(ENABLE_QTUITOOLS_SHARP "build QtUiTools" ON)
OPTION(ENABLE_QTWEBKIT_SHARP "build QtWebKit" ON)
OPTION(ENABLE_PHONON_SHARP "build PhononSharp" OFF)
OPTION(ENABLE_QSCINTILLA_SHARP "build QScintillaSharp" OFF)
OPTION(ENABLE_KHTML_SHARP "build KHTML" ON)
OPTION(ENABLE_KTEXTEDITOR_SHARP "build KTextEditor" ON)
OPTION(ENABLE_KIMONO "build Kimono" ON)
OPTION(ENABLE_QIMAGEBLITZ_SHARP "build QImageBlitzSharp" ON)

SET(QYOTO_ENABLED "no")
SET(QTSCRIPT_ENABLED "no")
set(QTTEST_ENABLED "no")
SET(QTWEBKIT_ENABLED "no")
SET(QTUITOOLS_ENABLED "no")
SET(QTWEBKIT_ENABLED "no")
SET(PHONON_SHARP_ENABLED "no")
SET(QSCINTILLA_SHARP_ENABLED "no")
SET(AKONADI_ENABLED "no")
SET(KIMONO_ENABLED "no")
SET(KHTML_SHARP_ENABLED "no")
SET(KTEXTEDITOR_SHARP_ENABLED "no")
SET(QIMAGEBLITZ_SHARP_ENABLED "no")

SET(KEYFILE ${CMAKE_CURRENT_SOURCE_DIR}/key.snk)
SET( UICS_EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/qyoto/tools/uics/uics )
SET( CSRCC_EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/qyoto/tools/csrcc/csrcc )

if(ENABLE_QYOTO)

    enable_language(CSharp OPTIONAL)

    IF (CMAKE_CSharp_COMPILER_LOADED)
        add_subdirectory( qyoto )
        set(QYOTO_ENABLED "yes")

        IF(ENABLE_QTSCRIPT_SHARP)
            SET(QTSCRIPT_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(qtscript)
        ENDIF(ENABLE_QTSCRIPT_SHARP)

        IF(ENABLE_QTTEST)
            SET(QTTEST_ENABLED "yes")
            ADD_SUBDIRECTORY( qttest )
        ENDIF(ENABLE_QTTEST)

        IF(ENABLE_QTUITOOLS_SHARP)
            SET(QTUITOOLS_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(qtuitools)
        ENDIF(ENABLE_QTUITOOLS_SHARP)

        IF(ENABLE_QTWEBKIT_SHARP)
            SET(QTWEBKIT_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(qtwebkit)
        ENDIF(ENABLE_QTWEBKIT_SHARP)

        IF(ENABLE_PHONON_SHARP)
            SET(PHONON_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(phonon)
        ENDIF(ENABLE_PHONON_SHARP)

        IF(ENABLE_QSCINTILLA_SHARP AND QSCINTILLA_FOUND)
            FIND_PACKAGE(QScintilla REQUIRED)
            SET(QSCINTILLA_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(qscintilla)
        ENDIF(ENABLE_QSCINTILLA_SHARP AND QSCINTILLA_FOUND)

        IF(ENABLE_KIMONO)
            SET(KIMONO_ENABLED "yes")
            ADD_SUBDIRECTORY(kimono)
        ENDIF(ENABLE_KIMONO)

        IF(ENABLE_KHTML_SHARP)
            SET(KHTML_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(khtml)
        ENDIF(ENABLE_KHTML_SHARP)

        IF(ENABLE_KTEXTEDITOR_SHARP)
            SET(KTEXTEDITOR_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(ktexteditor)
        ENDIF(ENABLE_KTEXTEDITOR_SHARP)

        IF(Soprano_FOUND)
            SET(SOPRANO_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(soprano)
        ENDIF(Soprano_FOUND)

        IF(Nepomuk_FOUND)
            SET(NEPOMUK_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(nepomuk)
        ENDIF(Nepomuk_FOUND)

        IF(ENABLE_QIMAGEBLITZ_SHARP)
            SET(QIMAGEBLITZ_SHARP_ENABLED "yes")
            ADD_SUBDIRECTORY(qimageblitz)
        ENDIF(ENABLE_QIMAGEBLITZ_SHARP)

        if(KDEPIMLIBS_FOUND AND Akonadi_FOUND)
            add_subdirectory( akonadi )
            set(AKONADI_ENABLED "yes")
        endif(KDEPIMLIBS_FOUND AND Akonadi_FOUND)

        SET(PLASMA_SHARP_ENABLED "yes")
        ADD_SUBDIRECTORY(plasma)

    ENDIF (CMAKE_CSharp_COMPILER_LOADED)
endif(ENABLE_QYOTO)

message(STATUS "Build Qyoto... " ${QYOTO_ENABLED})
message(STATUS "Build PhononSharp... " ${PHONON_SHARP_ENABLED})
message(STATUS "Build QScintillaSharp... " ${QSCINTILLA_SHARP_ENABLED})
message(STATUS "Build SopranoSharp... " ${SOPRANO_SHARP_ENABLED})
message(STATUS "Build NepomukSharp... " ${NEPOMUK_SHARP_ENABLED})
message(STATUS "Build PlasmaSharp... " ${PLASMA_SHARP_ENABLED})
message(STATUS "Build Kimono... " ${KIMONO_ENABLED})
message(STATUS "Build KHTMLSharp... " ${KHTML_SHARP_ENABLED})
message(STATUS "Build KTextEditorSharp... " ${KHTML_SHARP_ENABLED})
