enable_language(CSharp OPTIONAL)

macro_log_feature(CMAKE_CSharp_COMPILER_LOADED "C# compiler" "Mono or the .NET framework" "http://www.mono-project.com" FALSE "" "Required to compile the C# bindings")

if (NOT CMAKE_CSharp_COMPILER_LOADED)
    return()
endif (NOT CMAKE_CSharp_COMPILER_LOADED)

SET(KEYFILE ${CMAKE_CURRENT_SOURCE_DIR}/key.snk)
SET( UICS_EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/qyoto/tools/uics/uics )
SET( CSRCC_EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/qyoto/tools/csrcc/csrcc )
    
add_subdirectory( qyoto )
ADD_SUBDIRECTORY(qtscript)
ADD_SUBDIRECTORY( qttest )
ADD_SUBDIRECTORY(qtuitools)
ADD_SUBDIRECTORY(qtwebkit)
set(ENABLED_QYOTO_MODULES "Qyoto, QtScript, QtTest, QtUiTools, QtWebKit")

IF(PHONON_FOUND)
    ADD_SUBDIRECTORY(phonon)
    set(ENABLED_QYOTO_MODULES "${ENABLED_QYOTO_MODULES}, Phonon")
ENDIF(PHONON_FOUND)

IF(QSCINTILLA_FOUND)
    ADD_SUBDIRECTORY(qscintilla)
    set(ENABLED_QYOTO_MODULES "${ENABLED_QYOTO_MODULES}, QScintilla")
ENDIF(QSCINTILLA_FOUND)

IF(KDE4_FOUND)
    ADD_SUBDIRECTORY(kimono)
    ADD_SUBDIRECTORY(khtml)
    ADD_SUBDIRECTORY(ktexteditor)
    ADD_SUBDIRECTORY(plasma)
    set(ENABLED_QYOTO_MODULES "${ENABLED_QYOTO_MODULES}, Kimono, KHTML, KTextEditor, Plasma")
ENDIF(KDE4_FOUND)

IF(SOPRANO_FOUND)
    ADD_SUBDIRECTORY(soprano)
    set(ENABLED_QYOTO_MODULES "${ENABLED_QYOTO_MODULES}, Soprano")
ENDIF(SOPRANO_FOUND)

IF(Nepomuk_FOUND)
    ADD_SUBDIRECTORY(nepomuk)
    set(ENABLED_QYOTO_MODULES "${ENABLED_QYOTO_MODULES}, Nepomuk")
ENDIF(Nepomuk_FOUND)

IF(QIMAGEBLITZ_FOUND)
    ADD_SUBDIRECTORY(qimageblitz)
    set(ENABLED_QYOTO_MODULES "${ENABLED_QYOTO_MODULES}, QImageBlitz")
ENDIF(QIMAGEBLITZ_FOUND)

if(KDEPIMLIBS_FOUND AND Akonadi_FOUND)
    add_subdirectory( akonadi )
    set(ENABLED_QYOTO_MODULES "${ENABLED_QYOTO_MODULES}, Akonadi")
endif(KDEPIMLIBS_FOUND AND Akonadi_FOUND)

message(STATUS "Building Qyoto modules ${ENABLED_QYOTO_MODULES}")
